--- a/user_input.ipynb
+++ b/user_input.ipynb
@@ -92,6 +92,53 @@
     "predicted_text = processor.batch_decode(predicted_ids)[0]\n",
     "print(\"Predicted Text:\", predicted_text)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ground_truth_text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 27\u001b[0m\n\u001b[0;32m     24\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Call the function with confidence-based coloring\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m visualize_pronunciation_with_confidence(\u001b[43mground_truth_text\u001b[49m, predicted_text, logits)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ground_truth_text' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "def visualize_pronunciation_with_confidence(ground_truth, prediction, logits):\n",
+    "    ground_truth_words = ground_truth.split()\n",
+    "    predicted_words = prediction.split()\n",
+    "    \n",
+    "    # Calculate confidence scores (softmax on logits for each word)\n",
+    "    softmax = torch.nn.Softmax(dim=-1)\n",
+    "    confidence_scores = softmax(logits).max(dim=-1).values.squeeze().tolist()\n",
+    "    \n",
+    "    # Match confidence score to each predicted word\n",
+    "    fig, ax = plt.subplots()\n",
+    "    for idx, word in enumerate(ground_truth_words):\n",
+    "        if idx < len(predicted_words):\n",
+    "            # Green for correct, Red for incorrect, Gradient based on confidence\n",
+    "            correct = word.lower() == predicted_words[idx].lower()\n",
+    "            confidence = confidence_scores[idx] if idx < len(confidence_scores) else 1.0\n",
+    "            color = (1 - confidence, confidence, 0) if correct else (confidence, 0, 0)\n",
+    "            ax.text(idx * 0.5, 0.5, word, color=color, fontsize=12, ha='center')\n",
+    "        else:\n",
+    "            ax.text(idx * 0.5, 0.5, word, color=\"gray\", fontsize=12, ha='center')\n",
+    "    ax.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Call the function with confidence-based coloring\n",
+    "visualize_pronunciation_with_confidence(ground_truth_text, predicted_text, logits)\n"
+   ]
   }
  ],
  "metadata": {
