--- a/QuartzNet.ipynb
+++ b/QuartzNet.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from transformers import WhisperProcessor, WhisperForConditionalGeneration\n",
     "import torch\n",
     "import torchaudio\n",
     "import os"
@@ -26,40 +13,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Path to the TIMIT dataset audio file\n",
+    "audio_file = os.path.join(\"timit\", \"data\", \"TRAIN\", \"DR1\", \"FCJF0\", \"SA1.WAV\")\n",
     "\n",
-    "processor = WhisperProcessor.from_pretrained(\"openai/whisper-large-v2\")\n",
-    "model = WhisperForConditionalGeneration.from_pretrained(\"openai/whisper-large-v2\")\n"
+    "# Load the audio file\n",
+    "waveform, sample_rate = torchaudio.load(audio_file)\n",
+    "waveform = waveform.squeeze()\n",
+    "\n",
+    "# Resample to 16kHz if necessary\n",
+    "if sample_rate != 16000:\n",
+    "    waveform = torchaudio.transforms.Resample(sample_rate, 16000)(waveform)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Anaconda\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'QuartzNetForCTC' from 'transformers' (d:\\Anaconda\\Lib\\site-packages\\transformers\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Wav2Vec2Processor\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m QuartzNetForCTC  \u001b[38;5;66;03m# Hypothetical import as QuartzNet is usually available in NVIDIA's toolkit\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Replace with the correct model ID if QuartzNet is on Hugging Face; otherwise, use NVIDIA NeMo framework.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m quartz_processor \u001b[38;5;241m=\u001b[39m Wav2Vec2Processor\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnvidia/quartznet15x5\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'QuartzNetForCTC' from 'transformers' (d:\\Anaconda\\Lib\\site-packages\\transformers\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
+    "from transformers import Wav2Vec2Processor\n",
+    "from transformers import QuartzNetForCTC  # Hypothetical import as QuartzNet is usually available in NVIDIA's toolkit\n",
     "\n",
-    "timit_path = r\"timit\\data\\TRAIN\\DR1\\FCJF0\"  # Update this path as necessary\n",
-    "audio_file = os.path.join(timit_path, \"SA1.WAV\")\n",
+    "# Replace with the correct model ID if QuartzNet is on Hugging Face; otherwise, use NVIDIA NeMo framework.\n",
+    "quartz_processor = Wav2Vec2Processor.from_pretrained(\"nvidia/quartznet15x5\")\n",
+    "quartz_model = QuartzNetForCTC.from_pretrained(\"nvidia/quartznet15x5\")\n",
     "\n",
-    "waveform, sample_rate = torchaudio.load(audio_file)\n",
-    "waveform = waveform.squeeze()\n",
+    "# Process and tokenize the waveform\n",
+    "inputs = quartz_processor(waveform, sampling_rate=16000, return_tensors=\"pt\")\n",
     "\n",
-    "if sample_rate != 16000:\n",
-    "    waveform = torchaudio.transforms.Resample(sample_rate, 16000)(waveform)\n",
-    "\n",
-    "inputs = processor(waveform, sampling_rate=16000, return_tensors=\"pt\")\n",
-    "\n",
+    "# Get the predicted text from QuartzNet\n",
     "with torch.no_grad():\n",
-    "    predicted_ids = model.generate(inputs[\"input_features\"], max_length=50)\n",
+    "    logits = quartz_model(inputs.input_values).logits\n",
+    "    predicted_ids = torch.argmax(logits, dim=-1)\n",
     "\n",
-    "predicted_text = processor.batch_decode(predicted_ids, skip_special_tokens=True)[0]\n",
-    "print(\"Predicted Text:\", predicted_text)\n",
+    "# Decode the predicted ids to text\n",
+    "ground_truth_text = \"She had your dark suit in greasy wash water all year\"\n",
     "\n",
-    "ground_truth_text = \"She had your dark suit in greasy wash water all year\"\n"
+    "\n",
+    "predicted_text = quartz_processor.batch_decode(predicted_ids)[0]\n",
+    "print(\"QuartzNet Predicted Text:\", predicted_text)\n"
    ]
   },
   {
