--- a/WavLM_model.ipynb
+++ b/WavLM_model.ipynb
@@ -6,60 +6,52 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'WavLMProcessor' from 'transformers' (d:\\Anaconda\\Lib\\site-packages\\transformers\\__init__.py)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WavLMProcessor, WavLMForCTC\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchaudio\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'WavLMProcessor' from 'transformers' (d:\\Anaconda\\Lib\\site-packages\\transformers\\__init__.py)"
      ]
     }
    ],
    "source": [
-    "from transformers import WhisperProcessor, WhisperForConditionalGeneration\n",
+    "from transformers import WavLMProcessor, WavLMForCTC\n",
     "import torch\n",
     "import torchaudio\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
     "\n",
-    "processor = WhisperProcessor.from_pretrained(\"openai/whisper-large-v2\")\n",
-    "model = WhisperForConditionalGeneration.from_pretrained(\"openai/whisper-large-v2\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Load the WavLM processor and model\n",
+    "wavlm_processor = WavLMProcessor.from_pretrained(\"microsoft/wavlm-base-plus\")\n",
+    "wavlm_model = WavLMForCTC.from_pretrained(\"microsoft/wavlm-base-plus\")\n",
     "\n",
-    "timit_path = r\"timit\\data\\TRAIN\\DR1\\FCJF0\"  # Update this path as necessary\n",
-    "audio_file = os.path.join(timit_path, \"SA1.WAV\")\n",
+    "# Path to the TIMIT dataset audio file\n",
+    "audio_file = os.path.join(\"timit\", \"data\", \"TRAIN\", \"DR1\", \"FCJF0\", \"SA1.WAV\")\n",
     "\n",
+    "# Load the audio file\n",
     "waveform, sample_rate = torchaudio.load(audio_file)\n",
     "waveform = waveform.squeeze()\n",
     "\n",
+    "# Resample to 16kHz if necessary\n",
     "if sample_rate != 16000:\n",
     "    waveform = torchaudio.transforms.Resample(sample_rate, 16000)(waveform)\n",
     "\n",
-    "inputs = processor(waveform, sampling_rate=16000, return_tensors=\"pt\")\n",
+    "# Process and tokenize the waveform\n",
+    "inputs = wavlm_processor(waveform, sampling_rate=16000, return_tensors=\"pt\")\n",
     "\n",
+    "# Get the predicted text from the WavLM model\n",
     "with torch.no_grad():\n",
-    "    predicted_ids = model.generate(inputs[\"input_features\"], max_length=50)\n",
+    "    logits = wavlm_model(inputs.input_values).logits\n",
+    "    predicted_ids = torch.argmax(logits, dim=-1)\n",
     "\n",
-    "predicted_text = processor.batch_decode(predicted_ids, skip_special_tokens=True)[0]\n",
-    "print(\"Predicted Text:\", predicted_text)\n",
+    "# Decode the predicted ids to text\n",
+    "ground_truth_text = \"She had your dark suit in greasy wash water all year\"\n",
     "\n",
-    "ground_truth_text = \"She had your dark suit in greasy wash water all year\"\n"
+    "\n",
+    "predicted_text = wavlm_processor.batch_decode(predicted_ids)[0]\n",
+    "print(\"WavLM Predicted Text:\", predicted_text)\n"
    ]
   },
   {
