--- a/Whisper_model.ipynb
+++ b/Whisper_model.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'transformers'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WhisperProcessor, WhisperForConditionalGeneration\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchaudio\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'transformers'"
      ]
     }
    ],
@@ -129,6 +129,64 @@
     "f1 = f1_score([1]*len(labels), labels)\n",
     "\n",
     "plot_performance_metrics(accuracy, precision, recall, f1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "def get_labels(ground_truth, prediction):\n",
+    "    ground_truth_words = ground_truth.split()\n",
+    "    predicted_words = prediction.split()\n",
+    "    labels = [1 if gt.lower() == pd.lower() else 0 for gt, pd in zip(ground_truth_words, predicted_words)]\n",
+    "    return labels\n",
+    "\n",
+    "labels = get_labels(ground_truth_text, predicted_text)\n",
+    "\n",
+    "accuracy = accuracy_score([1]*len(labels), labels)\n",
+    "precision = precision_score([1]*len(labels), labels)\n",
+    "recall = recall_score([1]*len(labels), labels)\n",
+    "f1 = f1_score([1]*len(labels), labels)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy:.2f}\")\n",
+    "print(f\"Precision: {precision:.2f}\")\n",
+    "print(f\"Recall: {recall:.2f}\")\n",
+    "print(f\"F1 Score: {f1:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import torchaudio\n",
+    "\n",
+    "def visualize_audio_with_text_overlay(waveform, ground_truth, prediction, sample_rate=16000):\n",
+    "    ground_truth_words = ground_truth.split()\n",
+    "    predicted_words = prediction.split()\n",
+    "\n",
+    "    total_time = waveform.size(0) / sample_rate\n",
+    "    word_times = np.linspace(0, total_time, len(ground_truth_words) + 1)\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(np.linspace(0, total_time, waveform.size(0)), waveform.numpy(), label=\"Audio Signal\")\n",
+    "    \n",
+    "    for idx, word in enumerate(ground_truth_words):\n",
+    "        color = 'green' if idx < len(predicted_words) and word.lower() == predicted_words[idx].lower() else 'red'\n",
+    "        ax.text(word_times[idx], waveform.max(), word, color=color, fontsize=9, ha='center', va='bottom')\n",
+    "    \n",
+    "    ax.set_xlabel(\"Time (s)\")\n",
+    "    ax.set_ylabel(\"Amplitude\")\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "visualize_audio_with_text_overlay(waveform, ground_truth_text, predicted_text)\n"
    ]
   }
  ],
