--- a/QuartzNet.ipynb
+++ b/QuartzNet.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -325,34 +325,27 @@
     "import torchaudio\n",
     "\n",
     "def visualize_audio_with_text_overlay(waveform, ground_truth, prediction, sample_rate=16000, downsample_factor=10):\n",
-    "    # Downsample the waveform for visualization\n",
-    "    waveform = waveform[0, ::downsample_factor]  # Assuming waveform is 2D with shape (1, samples)\n",
+    "    waveform = waveform[0, ::downsample_factor]  \n",
     "\n",
-    "    # Split the ground truth and predicted text into words\n",
     "    ground_truth_words = ground_truth.split()\n",
     "    predicted_words = prediction.split()\n",
     "\n",
-    "    # Calculate total time and word times\n",
     "    total_time = waveform.size(0) / sample_rate\n",
     "    word_times = np.linspace(0, total_time, len(ground_truth_words) + 1)\n",
     "\n",
-    "    # Plotting the waveform\n",
-    "    fig, ax = plt.subplots(figsize=(10, 4))  # Resize figure to avoid large image issues\n",
+    "    fig, ax = plt.subplots(figsize=(10, 4))  \n",
     "    ax.plot(np.linspace(0, total_time, waveform.size(0)), waveform.numpy(), label=\"Audio Signal\")\n",
     "    \n",
-    "    # Overlay the ground truth words with colors (green for correct, red for incorrect)\n",
     "    for idx, word in enumerate(ground_truth_words):\n",
     "        color = 'green' if idx < len(predicted_words) and word.lower() == predicted_words[idx].lower() else 'red'\n",
     "        ax.text(word_times[idx], waveform.max(), word, color=color, fontsize=9, ha='center', va='bottom')\n",
     "    \n",
-    "    # Labeling the plot\n",
     "    ax.set_xlabel(\"Time (s)\")\n",
     "    ax.set_ylabel(\"Amplitude\")\n",
-    "    ax.set_xlim(0, total_time)  # Ensure x-axis matches the audio duration\n",
+    "    ax.set_xlim(0, total_time)  \n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
-    "# Example usage:\n",
     "visualize_audio_with_text_overlay(waveform, ground_truth_text, predicted_text)\n"
    ]
   },
