--- a/Jasper.ipynb
+++ b/Jasper.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NeMo W 2024-11-12 16:06:05 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\pydub\\utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
-      "      warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n",
-      "    \n",
-      "[NeMo W 2024-11-12 16:06:10 nemo_logging:393] Could not import NeMo NLP collection which is required for speech translation model.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torchaudio\n",
@@ -29,14 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 16:06:10 nemo_logging:381] Downloading from: https://api.ngc.nvidia.com/v2/models/nvidia/nemo/stt_en_jasper10x5dr/versions/1.0.0rc1/files/stt_en_jasper10x5dr.nemo to C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo\n"
+      "[NeMo I 2024-11-12 16:21:48 nemo_logging:381] Downloading from: https://api.ngc.nvidia.com/v2/models/nvidia/nemo/stt_en_jasper10x5dr/versions/1.0.0rc1/files/stt_en_jasper10x5dr.nemo to C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo\n",
+      "[NeMo I 2024-11-12 16:21:53 nemo_logging:381] Download from cloud failed. Attempt 1 of 3\n",
+      "[NeMo I 2024-11-12 16:21:53 nemo_logging:381] Download from cloud failed. Attempt 2 of 3\n",
+      "[NeMo I 2024-11-12 16:21:53 nemo_logging:381] Download from cloud failed. Attempt 3 of 3\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Not able to download url right now, please try again.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m asr_model \u001b[38;5;241m=\u001b[39m \u001b[43mnemo_asr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mEncDecCTCModel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mstt_en_jasper10x5dr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m timit_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtimit\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mTRAIN\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDR1\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mFCJF0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m audio_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(timit_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSA1.WAV\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32md:\\Anaconda\\Lib\\site-packages\\nemo\\core\\classes\\common.py:848\u001b[0m, in \u001b[0;36mModel.from_pretrained\u001b[1;34m(cls, model_name, refresh_cache, override_config_path, map_location, strict, return_config, trainer, save_restore_connector)\u001b[0m\n\u001b[0;32m    843\u001b[0m     class_, nemo_model_file_in_cache \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_get_hf_hub_pretrained_model_info(\n\u001b[0;32m    844\u001b[0m         model_name\u001b[38;5;241m=\u001b[39mmodel_name, refresh_cache\u001b[38;5;241m=\u001b[39mrefresh_cache\n\u001b[0;32m    845\u001b[0m     )\n\u001b[0;32m    846\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    847\u001b[0m     \u001b[38;5;66;03m# NGC source\u001b[39;00m\n\u001b[1;32m--> 848\u001b[0m     class_, nemo_model_file_in_cache \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_ngc_pretrained_model_info\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    849\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrefresh_cache\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrefresh_cache\u001b[49m\n\u001b[0;32m    850\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    852\u001b[0m instance \u001b[38;5;241m=\u001b[39m class_\u001b[38;5;241m.\u001b[39mrestore_from(\n\u001b[0;32m    853\u001b[0m     restore_path\u001b[38;5;241m=\u001b[39mnemo_model_file_in_cache,\n\u001b[0;32m    854\u001b[0m     override_config_path\u001b[38;5;241m=\u001b[39moverride_config_path,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    859\u001b[0m     save_restore_connector\u001b[38;5;241m=\u001b[39msave_restore_connector,\n\u001b[0;32m    860\u001b[0m )\n\u001b[0;32m    861\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m instance\n",
+      "File \u001b[1;32md:\\Anaconda\\Lib\\site-packages\\nemo\\core\\classes\\common.py:909\u001b[0m, in \u001b[0;36mModel._get_ngc_pretrained_model_info\u001b[1;34m(cls, model_name, refresh_cache)\u001b[0m\n\u001b[0;32m    907\u001b[0m cache_subfolder \u001b[38;5;241m=\u001b[39m hashlib\u001b[38;5;241m.\u001b[39mmd5((location_in_the_cloud \u001b[38;5;241m+\u001b[39m description)\u001b[38;5;241m.\u001b[39mencode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m))\u001b[38;5;241m.\u001b[39mhexdigest()\n\u001b[0;32m    908\u001b[0m \u001b[38;5;66;03m# if file exists on cache_folder/subfolder, it will be re-used, unless refresh_cache is True\u001b[39;00m\n\u001b[1;32m--> 909\u001b[0m nemo_model_file_in_cache \u001b[38;5;241m=\u001b[39m \u001b[43mmaybe_download_from_cloud\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    910\u001b[0m \u001b[43m    \u001b[49m\u001b[43murl\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilename\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcache_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcache_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubfolder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcache_subfolder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrefresh_cache\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrefresh_cache\u001b[49m\n\u001b[0;32m    911\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    913\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInstantiating model from pre-trained checkpoint\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    915\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m class_ \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32md:\\Anaconda\\Lib\\site-packages\\nemo\\utils\\cloud.py:84\u001b[0m, in \u001b[0;36mmaybe_download_from_cloud\u001b[1;34m(url, filename, subfolder, cache_dir, refresh_cache)\u001b[0m\n\u001b[0;32m     82\u001b[0m         sleep(\u001b[38;5;241m0.05\u001b[39m)\n\u001b[0;32m     83\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m---> 84\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot able to download url right now, please try again.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: Not able to download url right now, please try again."
      ]
     }
    ],
