--- a/Speech2TextAnalysis/combined_models.ipynb
+++ b/Speech2TextAnalysis/combined_models.ipynb
@@ -9,12 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ASUS\\anaconda3\\envs\\Speech2Text\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "[NeMo W 2024-11-13 14:40:16 nemo_logging:393] c:\\Users\\ASUS\\anaconda3\\envs\\Speech2Text\\Lib\\site-packages\\pydub\\utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
-      "      warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n",
-      "    \n",
-      "[NeMo W 2024-11-13 14:40:19 nemo_logging:393] Could not import NeMo NLP collection which is required for speech translation model.\n"
+      "[NeMo W 2024-11-13 19:40:56 nemo_logging:393] Could not import NeMo NLP collection which is required for speech translation model.\n"
      ]
     }
    ],
@@ -39,8 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timit_path = r\"timit\\data\\TRAIN\\DR1\\FCJF0\"\n",
-    "audio_file = os.path.join(timit_path, \"SA1.WAV\")"
+    "audio_file = r\"D:\\voice-based-pronunciation-prediction\\SA1.WAV\""
    ]
   },
   {
@@ -83,16 +77,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 23:40:15 nemo_logging:381] Found existing object C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n",
-      "[NeMo I 2024-11-12 23:40:15 nemo_logging:381] Re-using file from: C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo\n",
-      "[NeMo I 2024-11-12 23:40:15 nemo_logging:381] Instantiating model from pre-trained checkpoint\n"
+      "[NeMo I 2024-11-13 19:40:56 nemo_logging:381] Found existing object C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n",
+      "[NeMo I 2024-11-13 19:40:56 nemo_logging:381] Re-using file from: C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo\n",
+      "[NeMo I 2024-11-13 19:40:56 nemo_logging:381] Instantiating model from pre-trained checkpoint\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 23:40:25 nemo_logging:393] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
+      "[NeMo W 2024-11-13 19:41:18 nemo_logging:393] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
       "    Train config : \n",
       "    manifest_filepath: /data2/voices/train_1k.json\n",
       "    sample_rate: 16000\n",
@@ -132,7 +126,7 @@
       "    is_tarred: false\n",
       "    tarred_audio_filepaths: null\n",
       "    \n",
-      "[NeMo W 2024-11-12 23:40:25 nemo_logging:393] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
+      "[NeMo W 2024-11-13 19:41:18 nemo_logging:393] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
       "    Validation config : \n",
       "    manifest_filepath: /data2/voices/train_1k_samp.json\n",
       "    sample_rate: 16000\n",
@@ -174,14 +168,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 23:40:25 nemo_logging:381] PADDING: 16\n"
+      "[NeMo I 2024-11-13 19:41:18 nemo_logging:381] PADDING: 16\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 23:40:30 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\core\\connectors\\save_restore_connector.py:568: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "[NeMo W 2024-11-13 19:41:27 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\core\\connectors\\save_restore_connector.py:568: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "      return torch.load(model_weights, map_location='cpu')\n",
       "    \n"
      ]
@@ -190,17 +184,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 23:40:35 nemo_logging:381] Model EncDecCTCModel was successfully restored from C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n",
-      "[NeMo I 2024-11-12 23:40:35 nemo_logging:381] Found existing object C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_quartznet15x5\\16661021d16e679bdfd97a2a03944c49\\stt_en_quartznet15x5.nemo.\n",
-      "[NeMo I 2024-11-12 23:40:35 nemo_logging:381] Re-using file from: C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_quartznet15x5\\16661021d16e679bdfd97a2a03944c49\\stt_en_quartznet15x5.nemo\n",
-      "[NeMo I 2024-11-12 23:40:35 nemo_logging:381] Instantiating model from pre-trained checkpoint\n"
+      "[NeMo I 2024-11-13 19:41:36 nemo_logging:381] Model EncDecCTCModel was successfully restored from C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n",
+      "[NeMo I 2024-11-13 19:41:36 nemo_logging:381] Found existing object C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_quartznet15x5\\16661021d16e679bdfd97a2a03944c49\\stt_en_quartznet15x5.nemo.\n",
+      "[NeMo I 2024-11-13 19:41:36 nemo_logging:381] Re-using file from: C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_quartznet15x5\\16661021d16e679bdfd97a2a03944c49\\stt_en_quartznet15x5.nemo\n",
+      "[NeMo I 2024-11-13 19:41:36 nemo_logging:381] Instantiating model from pre-trained checkpoint\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 23:40:36 nemo_logging:393] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
+      "[NeMo W 2024-11-13 19:41:38 nemo_logging:393] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
       "    Train config : \n",
       "    manifest_filepath: /data2/voices/train_1k.json\n",
       "    sample_rate: 16000\n",
@@ -241,7 +235,7 @@
       "    tarred_audio_filepaths: /asr_set_1.2/train/train_{0..1023}.tar\n",
       "    num_workers: 20\n",
       "    \n",
-      "[NeMo W 2024-11-12 23:40:36 nemo_logging:393] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
+      "[NeMo W 2024-11-13 19:41:38 nemo_logging:393] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
       "    Validation config : \n",
       "    manifest_filepath: /data2/voices/train_1k_samp.json\n",
       "    sample_rate: 16000\n",
@@ -283,28 +277,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 23:40:36 nemo_logging:381] PADDING: 16\n",
-      "[NeMo I 2024-11-12 23:40:37 nemo_logging:381] Model EncDecCTCModel was successfully restored from C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_quartznet15x5\\16661021d16e679bdfd97a2a03944c49\\stt_en_quartznet15x5.nemo.\n"
+      "[NeMo I 2024-11-13 19:41:38 nemo_logging:381] PADDING: 16\n",
+      "[NeMo I 2024-11-13 19:41:40 nemo_logging:381] Model EncDecCTCModel was successfully restored from C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_quartznet15x5\\16661021d16e679bdfd97a2a03944c49\\stt_en_quartznet15x5.nemo.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at facebook/wav2vec2-base-960h were not used when initializing Wav2Vec2ForCTC: ['wav2vec2.encoder.pos_conv_embed.conv.weight_v', 'wav2vec2.encoder.pos_conv_embed.conv.weight_g']\n",
+      "Some weights of the model checkpoint at facebook/wav2vec2-base-960h were not used when initializing Wav2Vec2ForCTC: ['wav2vec2.encoder.pos_conv_embed.conv.weight_g', 'wav2vec2.encoder.pos_conv_embed.conv.weight_v']\n",
       "- This IS expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original0', 'wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original1', 'wav2vec2.masked_spec_embed']\n",
+      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original0', 'wav2vec2.masked_spec_embed', 'wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original1']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "[NeMo W 2024-11-12 23:40:42 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\transformers\\modeling_utils.py:463: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "[NeMo W 2024-11-13 19:41:48 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\transformers\\modeling_utils.py:463: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "      return torch.load(checkpoint_file, map_location=\"cpu\")\n",
       "    \n",
-      "Some weights of the model checkpoint at facebook/hubert-large-ls960-ft were not used when initializing HubertForCTC: ['hubert.encoder.pos_conv_embed.conv.weight_g', 'hubert.encoder.pos_conv_embed.conv.weight_v']\n",
+      "Some weights of the model checkpoint at facebook/hubert-large-ls960-ft were not used when initializing HubertForCTC: ['hubert.encoder.pos_conv_embed.conv.weight_v', 'hubert.encoder.pos_conv_embed.conv.weight_g']\n",
       "- This IS expected if you are initializing HubertForCTC from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing HubertForCTC from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of HubertForCTC were not initialized from the model checkpoint at facebook/hubert-large-ls960-ft and are newly initialized: ['hubert.encoder.pos_conv_embed.conv.parametrizations.weight.original0', 'hubert.encoder.pos_conv_embed.conv.parametrizations.weight.original1']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "[NeMo W 2024-11-12 23:40:48 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\whisper\\__init__.py:150: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "[NeMo W 2024-11-13 19:41:56 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\whisper\\__init__.py:150: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "      checkpoint = torch.load(fp, map_location=device)\n",
       "    \n"
      ]
@@ -332,7 +326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1179130307d14f48bef618d5480e4430",
+       "model_id": "ebd1c832067348b0a8dde04f6703d0ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +341,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 23:40:50 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\collections\\asr\\parts\\preprocessing\\features.py:417: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "[NeMo W 2024-11-13 19:41:58 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\collections\\asr\\parts\\preprocessing\\features.py:417: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
       "      with torch.cuda.amp.autocast(enabled=False):\n",
       "    \n"
      ]
@@ -362,7 +356,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43df0990258d409eb012d6b17c03919d",
+       "model_id": "e4a208bd67f44473ad6a77e5ed8add3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,7 +379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 23:40:58 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\whisper\\transcribe.py:126: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
+      "[NeMo W 2024-11-13 19:42:07 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\whisper\\transcribe.py:126: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
       "      warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n",
       "    \n"
      ]
@@ -844,7 +838,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Speech2Text",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
