--- a/Speech2TextModels/Jasper.ipynb
+++ b/Speech2TextModels/Jasper.ipynb
@@ -9,10 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 19:20:18 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\pydub\\utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
-      "      warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n",
-      "    \n",
-      "[NeMo W 2024-11-12 19:20:22 nemo_logging:393] Could not import NeMo NLP collection which is required for speech translation model.\n"
+      "[NeMo W 2024-11-13 19:40:28 nemo_logging:393] Could not import NeMo NLP collection which is required for speech translation model.\n"
      ]
     }
    ],
@@ -36,16 +33,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 19:20:23 nemo_logging:381] Found existing object C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n",
-      "[NeMo I 2024-11-12 19:20:23 nemo_logging:381] Re-using file from: C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo\n",
-      "[NeMo I 2024-11-12 19:20:23 nemo_logging:381] Instantiating model from pre-trained checkpoint\n"
+      "[NeMo I 2024-11-13 19:40:28 nemo_logging:381] Found existing object C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n",
+      "[NeMo I 2024-11-13 19:40:28 nemo_logging:381] Re-using file from: C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo\n",
+      "[NeMo I 2024-11-13 19:40:28 nemo_logging:381] Instantiating model from pre-trained checkpoint\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 19:20:37 nemo_logging:393] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
+      "[NeMo W 2024-11-13 19:40:47 nemo_logging:393] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
       "    Train config : \n",
       "    manifest_filepath: /data2/voices/train_1k.json\n",
       "    sample_rate: 16000\n",
@@ -85,7 +82,7 @@
       "    is_tarred: false\n",
       "    tarred_audio_filepaths: null\n",
       "    \n",
-      "[NeMo W 2024-11-12 19:20:37 nemo_logging:393] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
+      "[NeMo W 2024-11-13 19:40:47 nemo_logging:393] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
       "    Validation config : \n",
       "    manifest_filepath: /data2/voices/train_1k_samp.json\n",
       "    sample_rate: 16000\n",
@@ -127,14 +124,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 19:20:37 nemo_logging:381] PADDING: 16\n"
+      "[NeMo I 2024-11-13 19:40:47 nemo_logging:381] PADDING: 16\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 19:20:43 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\core\\connectors\\save_restore_connector.py:568: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "[NeMo W 2024-11-13 19:40:58 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\core\\connectors\\save_restore_connector.py:568: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "      return torch.load(model_weights, map_location='cpu')\n",
       "    \n"
      ]
@@ -143,15 +140,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2024-11-12 19:20:49 nemo_logging:381] Model EncDecCTCModel was successfully restored from C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n"
+      "[NeMo I 2024-11-13 19:41:06 nemo_logging:381] Model EncDecCTCModel was successfully restored from C:\\Users\\51man\\.cache\\torch\\NeMo\\NeMo_1.21.0\\stt_en_jasper10x5dr\\856ae08d5c4bd78b5e27f696e96f7aab\\stt_en_jasper10x5dr.nemo.\n"
      ]
     }
    ],
    "source": [
-    "asr_model = nemo_asr.models.EncDecCTCModel.from_pretrained(model_name=\"stt_en_jasper10x5dr\")\n",
-    "\n",
-    "timit_path = r\"timit\\data\\TRAIN\\DR1\\FCJF0\"\n",
-    "audio_file = os.path.join(timit_path, \"SA1.WAV\")"
+    "asr_model = nemo_asr.models.EncDecCTCModel.from_pretrained(model_name=\"stt_en_jasper10x5dr\")"
    ]
   },
   {
@@ -162,7 +156,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12415ccc065e4129aeccd8b0286984a2",
+       "model_id": "44b637fe34e2457da99aef50820b8339",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 19:20:50 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\collections\\asr\\parts\\preprocessing\\features.py:417: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "[NeMo W 2024-11-13 19:41:07 nemo_logging:393] d:\\Anaconda\\Lib\\site-packages\\nemo\\collections\\asr\\parts\\preprocessing\\features.py:417: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
       "      with torch.cuda.amp.autocast(enabled=False):\n",
       "    \n"
      ]
@@ -191,6 +185,8 @@
     }
    ],
    "source": [
+    "\n",
+    "audio_file = r\"D:\\voice-based-pronunciation-prediction\\SA1.WAV\"\n",
     "waveform, sample_rate = torchaudio.load(audio_file)\n",
     "if sample_rate != 16000:\n",
     "    waveform = torchaudio.transforms.Resample(sample_rate, 16000)(waveform)\n",
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +346,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2024-11-12 19:20:52 nemo_logging:393] C:\\Users\\51man\\AppData\\Local\\Temp\\ipykernel_22640\\1419713132.py:5: FutureWarning: \n",
+      "[NeMo W 2024-11-13 19:41:11 nemo_logging:393] C:\\Users\\51man\\AppData\\Local\\Temp\\ipykernel_22312\\1419713132.py:5: FutureWarning: \n",
       "    \n",
       "    Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "    \n",
